<resources>
    <string name="app_name">drdibi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">دکتر دیبی</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="mobile_hint"> شماره ی موبایل وارد کنید</string>
    <string name="weight_hint">وزن بیمار به کیلوگرم </string>
    <string name="age_hint">سن بیمار </string>
    <string name="female">زن هستم</string>
    <string name="male">مرد هستم</string>
    <string name="btnEnter">ورود</string>
    <string-array name="provinces">
        <item>استان</item>
        <item>آذربایجان شرقی</item>
        <item>آذربایجان غربی</item>
        <item>اردبیل</item>
        <item>اصفهان</item>
        <item>البرز</item>
        <item>ایلام</item>
        <item>بوشهر</item>
        <item>تهران</item>
        <item>چهارمحال وبختیاری</item>
        <item>خراسان جنوبی</item>
        <item>خراسان رضوی</item>
        <item>خراسان شمالی</item>
        <item>خوزستان</item>
        <item>زنجان</item>
        <item>سمنان</item>
        <item>سیستان و بلوچستان</item>
        <item>فارس</item>
        <item>قزوین</item>
        <item>قم</item>
        <item>کردستان</item>
        <item>کرمان</item>
        <item>کرمانشاه</item>
        <item>کهگیلویه و بویراحمد</item>
        <item>گلستان</item>
        <item>گیلان</item>
        <item>لرستان</item>
        <item>مازندران</item>
        <item>مرکزی</item>
        <item>هرمزگان</item>
        <item>همدان</item>
        <item>یزد</item>

    </string-array>
    <string name="menu_home">خانه</string>
    <string name="menu_gallery">چقدر انسولین بزنم؟</string>
    <string name="menu_slideshow">دیبی کالا</string>
    <string name="home_second">Home Second</string>
    <string name="height_hint">قد بیمار به سانتی متر</string>
    <string name="title_profile">پروفایل</string>
</resources>
